p3/app/test-playground.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    name: dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-playground
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wil-playground
  template:
    metadata:
      labels:
        app: wil-playground
    spec:
      containers:
        - name: wil-playground-server
          image: wil42/playground:v1
---
apiVersion: v1
kind: Service
metadata:
  name: wil-playground-service
spec:
  ports:
    - port: 8888
  selector:
    app: wil-playground
  type: ClusterIP
